@@ -13,7 +13,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-
+org.apache.tika.parser.apple.AppleSingleFileParser
 org.apache.tika.parser.chm.ChmParser
 org.apache.tika.parser.microsoft.JackcessParser
 org.apache.tika.parser.microsoft.OfficeParser
